prog bar gap issue is fixed, need to just add name

--- a/static/my_style.css
+++ b/static/my_style.css
@@ -69,3 +69,8 @@ body {
   justify-content: center;
   font-size: 15px;
 }
+
+.pbar{
+  padding-left : 0px;
+  padding-right : 0px;
+}
